Another Wild West Push + SCA stuff

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -890,6 +890,10 @@
   PBNews.225.d:0 "The Republic of Libertalia proclaimed today the unification of all American peoples under the newly born state of the Libertalian Federation. This new country was quick to make clear its intentions to defend its newly gained lands from any who wished to undermine it societal values, of which it held democracy and freedom to be the greatest national pillars. A show of force was conducted off the west coast with an artillery barrage. One shell was fired for every state, old and new, that was part of the Libertalian Federation. While many wonder whether conflict will arise with this new North American power both the United Commonwealth and Mexico remain doubtful."
   PBNews.225.a:0 "Land of the brave, home of the free."
 
+  PBNews.226.t:0 "THE FREE STATES OF AMERICA"
+  PBNews.226.d:0 "The Greater Dixie Republic announced today in the city of Calhoun that the formation of the Free States of America was to take place at this immediate moment. What the main functions of this new state are to be remains unknown, but many have cited the long history of slavery and crackdowns on civil rights as being stains that will likely still permeate the Free States of America. The United Commonwealth has made no comment on the matter, but many can already feel the rumblings of war at the Mississippi border. It seems there is yet to still be another showdown between the new south and the Commonwealth, only time can tell."
+  PBNews.226.a:0 "Oh, Liberty"
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
