--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -445,7 +445,7 @@
   SCA_A_Truly_American_Revolution:0 "A Truly American Revolution"
   SCA_A_Truly_American_Revolution_desc:0 "We've done it. Our territory is secured, the people stand rallied to the cause. We have expanded and made use of our limited industry to provide us the arms needed to fight. And our military stands ready for war. Now we must prepare for the next chapter of our cause. We are surrounded by other smaller nations in this untamed and wild land. Some can be brought into the revolution with words, others with guns. Whatever the result, we must secure the resources that surround us and liberate the people under the thumbs of their warlords. Then and only then, will we manifest our destiny to liberate the West and avenge the failure of 1776. We will march into victory and freedom! For the Revolution!"
 
-  # Second Continental Army - Exile THREE (CONGRESS)
+  # Second Continental Army - Exile Three
 
   SCA_The_All_American_Reclamation_Committee:0 "The All American Reclamation Committee"
   SCA_The_All_American_Reclamation_Committee_desc:0 ""
@@ -602,6 +602,44 @@
 
   SCA_The_Mississippi_Incident:0 "The Mississippi Incident"
   SCA_The_Mississippi_Incident_desc:0 ""
+
+  # Second Continental Army - Post-Unification
+
+  SCA_War_Is_A_Racket:0 "War Is A Racket"
+  SCA_War_Is_A_Racket_desc:0 ""
+
+  SCA_The_Great_American_Experiment:0 "The Great American Experiment"
+  SCA_The_Great_American_Experiment_desc:0 ""
+
+  SCA_President_For_Life:0 "President For Life"
+  SCA_President_For_Life_desc:0 ""
+
+  SCA_The_Tribunal_For_American_War_Criminals:0 "The Tribunal For American War Criminals"
+  SCA_The_Tribunal_For_American_War_Criminals_desc:0 ""
+
+  SCA_Establish_The_Interim_Government:0 "Establish The Interim Government"
+  SCA_Establish_The_Interim_Government_desc:0 ""
+
+  SCA_The_Union_Debate:0 "The Union Debate"
+  SCA_The_Union_Debate_desc:0 ""
+
+  SCA_The_Naval_Debate:0 "The Naval Debate"
+  SCA_The_Naval_Debate_desc:0 ""
+
+  SCA_The_Industry_Debate:0 "The Industry Debate"
+  SCA_The_Industry_Debate_desc:0 ""
+
+  SCA_The_Military_Debate:0 "The Military Debate"
+  SCA_The_Military_Debate_desc:0 ""
+
+  SCA_The_Native_Debate:0 "The Native Debate"
+  SCA_The_Native_Debate_desc:0 ""
+
+  SCA_The_Veterans_Debate:0 "The Veterans Debate"
+  SCA_The_Veterans_Debate_desc:0 ""
+
+  SCA_The_Capital_Question:0 "The Capital Question"
+  SCA_The_Capital_Question_desc:0 ""
 
   ##########################
   # TOOLTIPS/FLAGS/COSMETIC/TRAITS/PARTIES
