--- a/localisation/english/PB_WWW_l_english.yml
+++ b/localisation/english/PB_WWW_l_english.yml
@@ -58,6 +58,9 @@
   WWW_FRE_Tier_One:0 "Form the Republic of Libertalia"
   WWW_FRE_Tier_Two:0 "Form the Libertalian Federation"
 
+  WWW_NDX_Tier_One:0 "Form the Greater Dixie Republic"
+  WWW_NDX_Tier_Two:0 "Form the Free States of America"
+
   WWW_LAK_Join_Confederacy:0 "Join The Confederacy"
 
   ##########################
@@ -102,6 +105,10 @@
   FRE_Republic_of_Libertalia:0 "§HFreedonia§! will be known as the §HRepublic of Libertalia§!"
   FRE_Libertalian_Federation:0 "§HRepublic of Libertalia§! will be known as the §HLibertalian Federation§!"
   FRE_Tier_1_Formed:0 "Has formed the §HRepublic of Libertalia§!"
+
+  NDX_Greater_Dixie_Republic:0 "§HNew Dixie§! will be known as the §HGreater Dixie Republic§!"
+  NDX_Free_States_of_America:0 "§HGreater Dixie Republic§! will be known as the §HFree States of America§!"
+  NDX_Tier_1_Formed:0 "Has formed the §HGreater Dixie Republic§!"
 
   LAK_Confederation:0 "§HConfederacy of Free Tribes§! will be known as the §HConfederation of the First Nations§!"
 
@@ -206,3 +213,13 @@
   FRE_2:0 "Libertalian Federation"
   FRE_2_DEF:0 "Libertalian Federation"
   FRE_2_ADJ:0 "Trekker"
+
+  ## NDX
+
+  NDX_1:0 "Greater Dixie Republic"
+  NDX_1_DEF:0 "Greater Dixie Republic"
+  NDX_1_ADJ:0 "New Dixie"
+
+  NDX_2:0 "Free States of America"
+  NDX_2_DEF:0 "Free States of America"
+  NDX_2_ADJ:0 "New Dixie"
