COE work and adding cultures to forgotten countries

--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -954,6 +954,59 @@
   
   NWA_jc_party_long:0 "Transcendentalist Party of New Walden"
   NWA_jc_party:0 "TPNW"
+  
+  LIT_rc_party_long:0 "Lietuvių Tautininkų Sąjunga"
+  LIT_rc_party:0 "LTS"
+  LIT_ds_party_long:0 "Lietuvių Tautininkų Sąjunga"
+  LIT_ds_party:0 "LTS"
+  LIT_jc_party_long:0 "Lietuvos Socialdemokratų Partija"
+  LIT_jc_party:0 "LSP"
+  LIT_cn_party_long:0 "Lietuvos Krikščionių Demokratų Partija"
+  LIT_cn_party:0 "LKDP"
+  LIT_ss_party_long:0 "Lietuvos Darbo Federacija"
+  LIT_ss_party:0 "LDF"
+  LIT_lb_party_long:0 "Ūkininkų Partija"
+  LIT_lb_party:0 "ŪP"
+  LIT_ni_party:0 "-"
+  LIT_ni_party_long:0 "-"
+  LIT_an_party_long:0 "-"
+  LIT_an_party:0 "-"
+
+  EST_cn_party_long:0 "Põllumeeste Kogud"
+  EST_cn_party:0 "PK"
+  EST_ss_party_long:0 "Eesti Sotsialistlik Tööliste Partei"
+  EST_ss_party:0 "ESTP"
+  EST_jc_party_long:0 "Pahempoolsed Töölised ja Kehvikud"
+  EST_jc_party:0 "PTjK"
+  EST_lb_party_long:0 "Üleriiklik Majaomanike Seltside Liit"
+  EST_lb_party:0 "ÜMSL"
+  EST_jc_party_long:0 "-"
+  EST_jc_party:0 "-"
+  EST_rc_party_long:0 "-"
+  EST_rc_party:0 "-"
+  EST_ds_party_long:0 "Eesti Vabadussõjalaste Keskliit"
+  EST_ds_party:0 "Vapsid"
+  EST_ni_party_long:0 "-"
+  EST_ni_party:0 "-"
+  EST_an_party_long:0 "-"
+  EST_an_party:0 "-"
+
+  LAT_ss_party_long:0 "Latvijas Sociāldemokrātiskā Strādnieku Partija"
+  LAT_ss_party:0 "LSSP"
+  LAT_jc_party_long:0 "Latvijas Sociāldemokrātiskā Strādnieku Partija"
+  LAT_jc_party:0 "LSSP"
+  LAT_cn_party_long:0 "Latvijas Zemnieku Savienība"
+  LAT_cn_party:0 "LZS"
+  LAT_ds_party_long:0 "Latvijas Zemnieku Savienība"
+  LAT_ds_party:0 "LZS"
+  LAT_lb_party_long:0 "Demokrātiskais Centrs"
+  LAT_lb_party:0 "DC"
+  LAT_rc_party_long:0 "Nacionālā Apvienība"
+  LAT_rc_party:0 "NA"
+  LAT_ni_party_long:0 "Nacionālā Apvienība"
+  LAT_ni_party:0 "NA"  
+  LAT_an_party_long:0 "-"
+  LAT_an_party:0 "-"
 
  ############
  # POLITICAL PARTY TEMPLATE 
