--- a/localisation/english/PB_CoE_l_english.yml
+++ b/localisation/english/PB_CoE_l_english.yml
@@ -36,8 +36,14 @@
   PB_CoE_Spanish_Division_desc:0 "Spain has been an antagonistic force in European affairs for far too long now. One of the main castles of Bourbon influence in Europe, the Spanish Empire and its later iterations have dragged Europe time and time again into war. It is only right for us to rectify this mistake and divide the country into its fundamental parts, along community lines, and establish independent states that serve the interests of the League of Nations."
   PB_CoE_Spanish_Reconstruction:0 "Renew the Spanish Monarchy"
   PB_CoE_Spanish_Reconstruction_desc:0 "Under their luddite government, the Spanish saw a revival of monarchist nostalgia emerge among the middle and upper classes, informing government policy and the eventual decision to join the French in their crusade against the status quo. While we have defeated the monarch-friendly government, we haven't defeated the monarch-friendly people. It is perhaps in our best interest to restore the Spanish crown, but not under a Bourbon. Instead, a monarch that is willing to cooperate with Berlin and London is the better choice for the Spanish crown."
-  PB_CoE_Catalan_Occitan_Union:0 "Catalan-Occitan Unification"
-  PB_CoE_Catalan_Occitan_Union_desc:0 ""
+  PB_CoE_Pan_Occitan_State:0 "Catalan-Occitan Unification"
+  PB_CoE_Pan_Occitan_State_desc:0 "With the recent setting up of an Occitan state on the Spanish border, an interesting proposal has been made by local intellectuals from Occitania. They have proven that Occitan culture is rather similair to Catalan culture, insisting that the two should be united under a single government with the recent establishment of Occitania. While some seem to disagree with their assertion, especially Catalan nationalists, Britain has been chearleeding the initiative."
+  PB_CoE_Plan_Cavour:0 "Discuss the Cavour Plan"
+  PB_CoE_Plan_Cavour_desc:0 "For the second time this decade, Italy has betrayed its own national interest and instead followed the interest of France once more, proving the state to be a dangerous experiment that needs to be undone. The Cavour Plan is designed to solve the Italian issue, proposing the dissolution of Italy as a way to finally solve Italy's shaky place in Europe and put the Italian people under the supervision of the League of Nations."
+  PB_CoE_Extend_Monaco_Protection:0 "Monaco's Place in the Sun"
+  PB_CoE_Extend_Monaco_Protection_desc:0 "Like the Benelux region existing as a roadblock between the French and the Germans, buffer states tend to be a good solution to limit the chances of hostility. In the case of Italy, however, it doesn't really have any kind of buffer between its bordering major powers. A proposal is thus been requested by the delegation from Monaco, suppported by the German delegation, insisting upon the expansion of Monaco's territory, including the city of Nice. By expanding the gambling state, Monaco may act as a defensive bulwark for both Italian and French aggression."
+  PB_CoE_Aosta_Valley:0 "The Troubling Aosta Valley"
+  PB_CoE_Aosta_Valley_desc:0 "The Aosta Valley has been a sour point between France and Italy for a rather long time. A serious plan needs to be drawn up to fix this issue."   
  
   PB_CoE_Transitional_Government_Poland:0 "Appoint a Warsaw Government"
   PB_CoE_Transitional_Government_Poland_desc:0 "With the transitional government in place in the former Russian territory of Poland, a decision needs to be made on the future of Poland as a state. The choice is simple: Poland will either adopt a monarchy or become a liberal republic."
@@ -45,13 +51,29 @@
   PB_CoE_Establish_the_Intermarium:0 "Establish the Międzymorze"
   PB_CoE_Courland_Question:0 "Courland Question"
   PB_CoE_Courland_Question_desc:0 "Courland has been historically associated with the Polish-Lithuanian Commonwealth. Should we return this piece of Baltic coast to the Commonwealth or allow it to decide its own fate later?"
-  PB_CoE_Prussian_Question:0 "East Prussian Question"
+  PB_CoE_Prussian_Question:0 "The East Prussian Question"
   PB_CoE_Belarus_Question:0 "Revisiting the Polish-Ruthenian Border"
-  
+  PB_CoE_Memel_Question:0 "The Memel Question"
+
+  PB_CoE_Hold_a_Referendum:0 "Hold a Baltic Referendum"
+  PB_CoE_Hold_a_Referendum_desc:0 "With the liberation of the Baltic people from Russian oppression, a serious question must be answered: how will the future of the Baltics be shaped? Entangled in the politics of their bordering countries, including Finland, Poland, Russia and Germany, the Baltics are an important part in the European puzzle and thus a high priority for the Conference of Europe." 
+  PB_CoE_Prop_Up_Baltic_Federation:0 "Prop up a Baltic State"
+  PB_CoE_Prop_Up_Baltic_Federation_desc:0 "While the idea of a referendum has been floating around for a while, the Baltics are far too important to weaken through national sovereign states independent from Riga. German forces thus need to prop up a strong Baltic state, presumably with support from local authoritarians for a future confrontation with the Russians." 
+  PB_CoE_Discussing_Wilno:0 "Treating the Wilno Issue"
+  PB_CoE_Discussing_Wilno_desc:0 "Wilno/Vilnius has become a sensitive issue for the Baltic region. Several people claim the region, including Belarus, Poland and Lithuania. An answer is needed: who will govern this controversial region?" 
+  PB_CoE_Add_to_the_Intermarium:0 "Include the Baltic in the Międzymorze"
+  PB_CoE_Add_to_the_Intermarium_desc:0 "The establishment of the Międzymorze in Poland has attracted attention in the Baltics. The idea of a strong Eastern European state able to defend itself against future Russian imperialism, made up from old Commonwealth nations is intrigueing to some. While nationalists decry the idea of joining a nation with the Polish, elements inside the Baltics and the delegations present at the Conference may look more favourably on a strong Eastern Europe."
+
+  PB_CoE_Form_a_Belarussian_Government:0 "Appoint a Minsk Government"
+  PB_CoE_Form_a_Belarussian_Government_desc:0 "The interim occupation government of Belarus has lived out its use and soon a more native government will need to be appointed to placate the population. Serious questions need to be answered about the future of Belarus, as the delegations have turned the topic controversial. Ideas ranging from democracy and monarchy to propping up a local dictator instead have been proposed, with the unifying fear being that the Belarusian people will soon try and unite again with the Russian people given the chance. Can a democracy placate them into the European sphere or can only the hard hand of monarchy or dictatorship keep the Belarusian people under our strict control."
+
   PB_CoE_France_as_topic:0 "Discussing France"
   PB_CoE_Spain_as_topic:0 "Discussing Spain"
   PB_CoE_Italy_as_topic:0 "Discussing Italy"
   PB_CoE_Poland_as_topic:0 "Discussing Poland"
+  PB_CoE_Baltics_as_topic:0 "Discussing the Baltics"
+  PB_CoE_Belarus_as_topic:0 "Discussing Belarus"
+  PB_CoE_Caucasus_as_topic:0 "Discussing the Caucasus"
 
   Coe_get_topic_France:0 "§GFrance§!"
   Coe_get_topic_Spain:0 "§GSpain§!"
@@ -152,15 +174,22 @@
   COE.23.a:0 "Let's talk about Spain, gentlemen"
   COE.24.t:0 "Conference of Europe: New Spanish Monarchy"
   COE.24.d:0 "-"
-  COE.24.a:0 "Come back later to add options"
+  COE.24.a:0 "Maria can rule Iberia"
+  COE.24.b:0 "Robert brings the Habsburgs back to Spain"
   COE.25.t:0 "Conference of Europe: Divided Peninsula"
   COE.25.d:0 "-"
   COE.25.a:0 "Divide along the east and the west"
   COE.25.b:0 "Destroy the concept of Spain"
+  COE.26.t:0 "Conference of Europe: Pan-Occitania"
+  COE.26.d:0 "-"
+  COE.26.a:0 "On second thought..."
+  COE.26.b:0 "Use the established Catalan borders"
+  COE.26.c:0 "Follow the Catalan Countries concept"
+  COE.27.t:0 "Conference of Europe: Including Andorra?"
+  COE.27.d:0 "-"
+  COE.27.a:0 "Andorra can remain sovereign"
+  COE.27.b:0 "Include Andorra in Pan-Occitania"
 
-  COE.30.t:0 "Conference of Europe: Italy"
-  COE.30.d:0 "-"
-  COE.30.a:0 "Let's get to work"
   COE.31.t:0 "Conference of Europe: Cavour Plan"
   COE.31.d:0 "Named after the old Count of Cavour, Camillo Benso, who opposed Italian unification under the Bourbons of the Two Sicilies, the Cavour Plan is the topic of debate that is raging through Palace het Loo. Few if any representatives are truly sure what to do with the Italian peninsula after its turn against the League of Nations and its support for French aggression. Many British diplomats argue that the support for France was unnatural, forced by French intervention and not a true expression of Italy's desire during the war. The nation was basically a hostage, forced by Paris to do its bidding. A few German representatives and the diplomats hailing from the Balkan nations disagree heavily with this assesement. \n\nThe opposition thus proposed the Cavour Plan, seeking to end the Italian project and dissolve the nation back into its original nation-states. A less aggressive version of the plan simply divides the nation into two blocs, a northern kingdom under German influence and a southern kingdom that is subject to British interests. Most British diplomats are, however, not keen on dividing the kingdom and still support lesser punishements for Italy than the dissolution of their nation."
   COE.31.a:0 "Italy may stay like it is..."
@@ -186,7 +215,7 @@
   COE.42.t:0 "The Next King of Poland?"
   COE.42.d:0 "With the selection of a parliamentary monarchy as government form, Poland still needs to answer one question: which monarch will become the figurehead of the Polish people? A real Polish line has become lacking this decade, with many old Polish aristocrats dying out during the wars. Mainly foreign options remain and both Britain and Germany are eager to present their picks for an individual fit for the Polish crown."
   COE.42.a:0 "Georg of Saxony will lead the Poles"
-  COE.42.b:0 "-"
+  COE.42.b:0 "A British prince befits the brave Poles"
   COE.43.t:0 "First Polish Parliamentary Election"
   COE.43.d:0 "As the Sjem, the parliament of Polish democracy, is being build in the former Russian palace of Warsaw, the ballot-boxes have been put in place for the first election. Young parties have popped up out of the anti-Russian resistance cells that once fought for Polish independence, all split on their specific ideological views on Poland's future. The most prominent of these groups is the ghost of Galicia himself, Józef Piłsudski, leader of the revolutionary agrarian party, despite his sickness. His reputation has become the status of legends among Polish partisans, as Piłsudski's raids from Hungary into Galicia against Russian outposts kept morale high in the independence movement. Across from the Galician ghost stands a similar, though lesser known, figure: Eligiusz Niewiadomski. Having taken over control of the National Democrats after the death of Roman Dmowski in '32 at the hands of the Russians, Niewiadomski also operated in Galicia as a smuggler of nationalist propaganda. His ideology, however, turns him into a staunch opponent of Pilsudski's revolutionary ideas, with Niewiadomski promoting anti-anarchism, christian nationalism and anti-Jewish legislation. \n\nKeeping these fringes in check are both the liberals and the conservatives, which both seem to shape Polish politics into a two party plus system. The liberal Peasants Party of Gabriel J. Narutowicz and the Republican Union of Stanisław Grabski are shaping up to become the main competitors of this election, but it remains uncertain if they can keep the fringes from making a surprising victory in this first election."
   COE.43.a:0 "Pilsudski leads Poland to the future!"
@@ -211,6 +240,12 @@
   COE.49.a:0 "Lithuania has a just claim to Memel"
   COE.49.b:0 "Germany can better protect this land"
   COE.49.c:0 "Poland-Lithuania has a clear historical claim"
+  COE.51.t:0 "Conference of Europe: Wilno"
+  COE.51.d:0 "-"
+  COE.51.a:0 "Give it to the Poles"
+  COE.51.b:0 "Give it to the Belarussians"
+  COE.51.c:0 "Give it to the Lithuanians"
+  COE.51.e:0 "Give it to the Baltics" 
 
   COEDEXTER.1.t:0 "The Discussion of a Jewish Homeland"
   COEDEXTER.1.d:0 "As British diplomats seek to further placate us with their Dexter Plan, the proposal of German diplomats to carve some territory away from France and give it to the Jewish people has been given the green light by the Brits. The Jewish people have suffered immensely under the French dictatorship, seeing themselves stripped from citizenship, property and sometimes their lives. The least we can do is come together and repay the Jewish people, a globally persecuted people, with their own homeland in France. \n\nThe question now remains which French state to grant the Jewish people. Preferably, the territory has a coast and isn't already claimed by another country."
@@ -223,6 +258,12 @@
   COEGOV.4.d:0 "Supposedly forged out of the iron nails used to crucify Christ the Lord himself, the Iron Crown of Lombardy has become an artifact that has traveled the continent in a short span of time. When Italy fell, the crown suddenly vanished out of Lombardy, but was quickly found in the streets of Vienna. Since then, the crown became property of the German state. \n\nWith the establishment of an independent North Italian kingdom under the rule of Peter Ferdinand, a Habsburg relative, the situation of the Iron Crown has been turned into a question once more. Pietro, an avid Italophile and catholic fanatic, has sought to restore the Iron Crown to his new kingdom, hoping to form a new identity in the North of Italy around the legendary kinds of Lombardy, the mercantile exploits of Venice and the artistic ways of Tuscany."
   COEGOV.4.a:0 "Give him the crown, we have no need for it"
   COEGOV.4.b:0 "A museum would be a proper place for this thing" 
+  COEGOV.6.t:0 "Unrest in the Baltic State"
+  COEGOV.6.d:0 "The propping up of an authoritarian government in the Baltics has been met with enormous popular resistance. The Baltic people have been dissapointed in the League of Nations, seeing the replacement of a brutal authoritarian system of governance with a new authoritarian system of governance instead of the promised Western democracy. The establishment of the Ulmanis government has sparked the flame from which the Baltic Liberation Front has sprung out of, a multinational organization designed to be a barrier to the new authoritarian regime. More nationalistic assocations have also sprung up, seeking to end the artificial Baltic state and establish their own national authoritarian states, independent from the League of Nations and its freemason influences. \n\nUlmanis seems to be able to handle the situation with our continued support, but his position has become delicate. Pulling out of the region would seriously threaten the friendly regime of Riga."
+  COEGOV.6.a:0 "An unfortunate development..."  
+  COEGOV.7.t:0 "The Russo-Baltic Explusion"
+  COEGOV.7.d:0 "The authoritarian Ulmanis of the Baltic State has followed through with what was initially expected to be empty rethoric, forcing families of Russo-Baltic origin to cross the border into wartorn Russia, seizing property from those families and redistributing them to poorer natives. The brutality of this policy has been heavily criticized by the international community after the sudden realization of what was happening in the Baltics, but Germany and Britain have also been facing major criticism for their role. Beyond enabling Ulmanis with unlimited presidential power and setting up his government, British and German troops actively did not intervene against Baltic police and soldiers and simply observed the violent expulsion. \n\nThe only region of the Baltics that still has a majority of Russo-Baltic natives is Saaremaa, as the islands have become a serious point of agitation against the Riga regime and the Baltic partisans, forming organizations sympathetic to the old Russian neo-imperialist regime and advocating for annexation with the Purishkevich administration."
+  COEGOV.7.a:0 "The Baltics grow tenser and tenser..." 
 
   COENEWS.1.t:0 "PORTUGAL FALLS TO CIVIL WAR"
   COENEWS.1.d:0 "The restoration of the pre-Fatimist monarchy in Portugal with British and German support has taken a wrong term rather quickly. Supporters of the previous theocracy have taken up arms in the north of the country, challenging the legitimacy of the monarchy. \n\nIn a short amount of time, pro-monarchy and pro-fatamist elements have started rallying behind their respective banners in this conflict. With the lines drawn in the sand, the next conflict in Portugal promsies to turn the post-war government transition towards constitutional monarchy ever more bloody in Iberia."
@@ -235,6 +276,10 @@
   COENEWS.3.a:0 "A victory for the post-war construction"
 
   #Cosmetics
+
+  OCT_PAN:0 "Pan-Occitania"
+  OCT_PAN_DEF:0 "the Kingdom of Pan-Occitania"
+  OCT_PAN_ADJ:0 "Occitan" 
 
   MOD:0 "Duchy of Modena"
   MOD_DEF:0 "the Duchy of Modena and Reggio"
@@ -305,7 +350,30 @@
   BAL_UNION:0 "Baltic Federation"
   BAL_UNION_DEF:0 "the Baltic Federation"
   BAL_UNION_ADJ:0 "Baltic"
+ 
+  BAL_STATE:0 "Baltic State"
+  BAL_STATE_DEF:0 "the Baltic State"
+  BAL_STATE_ADJ:0 "Baltic"
 
+  SPR_KINGDOM_2:0 "Kingdom of Spain"
+  SPR_KINGDOM_2_ADJ:0 "Spanish"
+  SPR_KINGDOM_2_DEF:0 "the Kingdom of Spain"
+
+  SPR_KINGDOM_1:0 "Kingdom of Spain"
+  SPR_KINGDOM_1_ADJ:0 "Spanish"
+  SPR_KINGDOM_1_DEF:0 "the Kingdom of Spain"
+
+  BLR_KINGDOM:0 "Kingdom of Belarus"
+  BLR_KINGDOM_DEF:0 "the Kingdom of Belarus"
+  BLR_KINGDOM_ADJ:0 "Belarusian"
+
+  BLR_REPUBLIC:0 "Republic of Belarus"
+  BLR_REPUBLIC_DEF:0 "the Republic of Belarus"
+  BLR_REPUBLIC_ADJ:0 "Belarusian"
+
+  BLR_STATE:0 "People's Republic of Belarus"
+  BLR_STATE_DEF:0 "the People's Republic of Belarus"
+  BLR_STATE_ADJ:0 "Belarusian
   #Ideas
  
   PB_Constitutionally_Enshrined_Neutrality:0 "International Neutrality"
