--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -356,6 +356,12 @@
   FST_an_party_long:0 "German Pacific Authority"
   FST_ni_party:0 "FRA"
   FST_ni_party_long:0 "Front Revanchard Australien"
+  FST_ss_party:0 "-"
+  FST_ss_party_long:0 "-"
+  FST_ds_party:0 "-"
+  FST_ds_party_long:0 "-"
+  FST_rc_party:0 "-"
+  FST_rc_party_long:0 "-"
 
   HOL_cn_party_long:0 "Anti-Revolutionaire Partij"
   HOL_cn_party:0 "ARP"
@@ -380,11 +386,16 @@
   BRT_rc_party:0 "SBB"
   BRT_cn_party_long:0 "Union Régionaliste Bretonne"
   BRT_cn_party:0 "URB"
-
-  SER_rc_party_long:0 "Karadordevic"
-  SER_rc_party:0 "Karadordevic"
-  SER_ni_party_long:0 "Narodna Radikalna Stranka"
-  SER_ni_party:0 "NRS"
+  BRT_an_party_long:0 "-"
+  BRT_an_party:0 "-"
+  BRT_ds_party_long:0 "Strollad Broadel Breizh"
+  BRT_ds_party:0 "SBB"
+  BRT_ni_party_long:0 "Strollad Broadel Breizh"
+  BRT_ni_party:0 "SBB"
+  BRT_lb_party_long:0 "Parti Libéral de Bretagne"
+  BRT_lb_party:0 "PLB"
+  BRT_jc_party_long:0 "-"
+  BRT_jc_party:0 "-"
 
   SLO_ni_party_long:0 "Hlinkova Slovenská Ludová Strana"
   SLO_ni_party:0 "HSLS"
@@ -643,6 +654,20 @@
 
   SER_ds_party:0 "Karađorđević"
   SER_ds_party_long:0 "House of Karađorđević" 
+  SER_rc_party_long:0 "Karadordevic"
+  SER_rc_party:0 "Karadordevic"
+  SER_ss_party_long:0 "Narodna Radikalna Stranka"
+  SER_ss_party:0 "NRS"
+  SER_lb_party_long:0 "Srpska Napredna Stranka"
+  SER_lb_party:0 "SNS"
+  SER_jc_party_long:0 "Srpska Socijaldemokratska Partija"
+  SER_jc_party:0 "SSP" 
+  SER_cn_party_long:0 "Nacionalna Seljacka Partija"
+  SER_cn_party:0 "NSP"
+  SER_ni_party_long:0 "Chetnik Assocations"
+  SER_ni_party:0 "Chetniks"
+  SER_an_party_long:0 "-"
+  SER_an_party:0 "-"
 
   AFG_ds_party:0 "Musahiban"
   AFG_ds_party_long:0 "House of Musahiban"
