--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -565,9 +565,9 @@
  VICTORY_POINTS_12942:0 "Córdoba"
  VICTORY_POINTS_650:0 "Santiago"
  VICTORY_POINTS_10400:0 "Pretoria"
- VICTORY_POINTS_1468:0 "Durban"
- VICTORY_POINTS_4696:0 "Port Elizabeth"
- VICTORY_POINTS_12589:0 "Cape Town"
+ VICTORY_POINTS_1468:0 "Stavenisse"
+ VICTORY_POINTS_4696:0 "Watersehaven"
+ VICTORY_POINTS_12589:0 "Kaapstad"
  VICTORY_POINTS_8245:0 "Lourenco Marques"
  VICTORY_POINTS_8248:0 "Luanda"
  VICTORY_POINTS_10966:0 "Nova Lisboa"
