--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -689,8 +689,44 @@
   SCA_The_American_Cultural_Revolution:0 "The American Cultural Revolution"
   SCA_The_American_Cultural_Revolution_desc:0 ""
 
-  SCA_The_American_Century:0 "The American Century"
-  SCA_The_American_Century_desc:0 ""
+  SCA_Establish_The_Anti_War_League:0 "Establish The Anti-War League"
+  SCA_Establish_The_Anti_War_League_desc:0 ""
+
+  SCA_Intensify_Anglo_Rivarly:0 "Intensify Anglo Rivarly"
+  SCA_Intensify_Anglo_Rivarly_desc:0 ""
+
+  SCA_Emphasize_The_American_Plight:0 "Emphasize The American Plight"
+  Emphasize_The_American_Plight_desc:0 ""
+
+  SCA_The_Thorn_In_Our_Side:0 "The Thorn In Our Side"
+  SCA_The_Thorn_In_Our_Side_desc:0 ""
+
+  SCA_Kill_The_Fat_Bastards:0 "Kill The Fat Bastards"
+  SCA_Kill_The_Fat_Bastards_desc:0 ""
+
+  SCA_The_Butler_Manifesto:0 "The Butler Manifesto"
+  SCA_The_Butler_Manifesto_desc:0 ""
+
+  SCA_Proclaim_The_North_American_Union:0 "Proclaim The North American Union"
+  SCA_Proclaim_The_North_American_Union_desc:0 ""
+
+  SCA_The_Alaska_Purchase:0 "The Alaska Purchase"
+  SCA_The_Alaska_Purchase_desc:0 ""
+
+  SCA_Appeal_To_The_Caribbean_Republics:0 "Appeal To The Caribbean Republics"
+  SCA_Appeal_To_The_Caribbean_Republics_desc:0 ""
+
+  SCA_The_London_Bomber_Program:0 "The London Bomber Program"
+  SCA_The_London_Bomber_Program_desc:0 ""
+
+  SCA_A_Pragmatic_Alliance:0 "A Pragmatic Alliance"
+  SCA_A_Pragmatic_Alliance_desc:0 ""
+
+  SCA_Workers_Of_The_World:0 "Workers of The World"
+  SCA_Workers_Of_The_World_desc:0 ""
+
+  SCA_Operation_Burning_South:0 "Operation: Burning South"
+  SCA_Operation_Burning_South_desc:0 ""
 
   ##########################
   # TOOLTIPS/FLAGS/COSMETIC/TRAITS/PARTIES
