--- a/localisation/english/PB_CoE_l_english.yml
+++ b/localisation/english/PB_CoE_l_english.yml
@@ -32,12 +32,16 @@
   PB_CoE_The_Parisian_Government_desc:0 "The French occupation authority is only made to be temporary, so a big question remains in the air during the conference: what kind of regime is to be imposed upon the French after their revanchist one? \n\nThe main two options seem to be a new Republican form of government or a constitutional monarchy without the Bourbons. A republic, while potentially a great boon for a flourishing French democracy in the future, was also the form of government that allowed Doriot and his party to perverse democracy into the revanchist threat we faced. A monarchy, meanwhile, may face new problems and could be seriously unpopular among the French people." 
   PB_CoE_Fate_of_Algeria:0 "Fate of Algeria"
   PB_CoE_Fate_of_Algeria_desc:0 "The French acquired the colony of Algeria after the Pied-Noir found themselves victorious during the civil conflict in the region. They longed to unify the old colony to the mainland and were under the Parisian thumb during the Second Great War. Now, we're facing a seriously complex situation. While the Pied-Noir are still loyal to Paris, the majority native population of Algeria would rather be governed by themselves, as an independent republic. The British, meanwhile, still prefer to return Algeria as a part of the Empire."
+
   PB_CoE_Spanish_Division:0 "Dividing the Peninsula"
   PB_CoE_Spanish_Division_desc:0 "Spain has been an antagonistic force in European affairs for far too long now. One of the main castles of Bourbon influence in Europe, the Spanish Empire and its later iterations have dragged Europe time and time again into war. It is only right for us to rectify this mistake and divide the country into its fundamental parts, along community lines, and establish independent states that serve the interests of the League of Nations."
   PB_CoE_Spanish_Reconstruction:0 "Renew the Spanish Monarchy"
   PB_CoE_Spanish_Reconstruction_desc:0 "Under their luddite government, the Spanish saw a revival of monarchist nostalgia emerge among the middle and upper classes, informing government policy and the eventual decision to join the French in their crusade against the status quo. While we have defeated the monarch-friendly government, we haven't defeated the monarch-friendly people. It is perhaps in our best interest to restore the Spanish crown, but not under a Bourbon. Instead, a monarch that is willing to cooperate with Berlin and London is the better choice for the Spanish crown."
   PB_CoE_Pan_Occitan_State:0 "Catalan-Occitan Unification"
   PB_CoE_Pan_Occitan_State_desc:0 "With the recent setting up of an Occitan state on the Spanish border, an interesting proposal has been made by local intellectuals from Occitania. They have proven that Occitan culture is rather similair to Catalan culture, insisting that the two should be united under a single government with the recent establishment of Occitania. While some seem to disagree with their assertion, especially Catalan nationalists, Britain has been chearleeding the initiative."
+  PB_CoE_Reestablish_Euskadi:0 "Bulwark Euskadi?"
+  PB_CoE_Reestablish_Euskadi_desc:0 "Bearing the brunt of French and Spanish aggression, the Basque people have proven their capability in their resistance of both tyrannical governments, preserving their unique culture and democracy in the face of incredible odds. Now, the question remains of the future of the Basque people. Is restoration enough or do we have to prop up a proper bulwark for future expansionism?" 
+
   PB_CoE_Plan_Cavour:0 "Discuss the Cavour Plan"
   PB_CoE_Plan_Cavour_desc:0 "For the second time this decade, Italy has betrayed its own national interest and instead followed the interest of France once more, proving the state to be a dangerous experiment that needs to be undone. The Cavour Plan is designed to solve the Italian issue, proposing the dissolution of Italy as a way to finally solve Italy's shaky place in Europe and put the Italian people under the supervision of the League of Nations."
   PB_CoE_Extend_Monaco_Protection:0 "Monaco's Place in the Sun"
@@ -63,6 +67,8 @@
   PB_CoE_Discussing_Wilno_desc:0 "Wilno/Vilnius has become a sensitive issue for the Baltic region. Several people claim the region, including Belarus, Poland and Lithuania. An answer is needed: who will govern this controversial region?" 
   PB_CoE_Add_to_the_Intermarium:0 "Include the Baltic in the Międzymorze"
   PB_CoE_Add_to_the_Intermarium_desc:0 "The establishment of the Międzymorze in Poland has attracted attention in the Baltics. The idea of a strong Eastern European state able to defend itself against future Russian imperialism, made up from old Commonwealth nations is intrigueing to some. While nationalists decry the idea of joining a nation with the Polish, elements inside the Baltics and the delegations present at the Conference may look more favourably on a strong Eastern Europe."
+  PB_CoE_Estonian_Petition_for_Union:0 "The Estonian Petition"
+  PB_CoE_Estonian_Petition_for_Union_desc:0 "It has only been mere weeks since Estonia has gained its independence, yet the government in Talinn has already petitioned the Conference to look into the matter of unifying Estonia with Finland. Finnish-Estonian unionism isn't a new concept, gaining ground in the 19th century during the peak of Russification and only expanding in popularity during Finland's war of independence against the Russians. For a long time, Estonian leaders have looked up to Finland as a bigger brother in many matters and this union would solidify their position on the matter."
 
   PB_CoE_Form_a_Belarussian_Government:0 "Appoint a Minsk Government"
   PB_CoE_Form_a_Belarussian_Government_desc:0 "The interim occupation government of Belarus has lived out its use and soon a more native government will need to be appointed to placate the population. Serious questions need to be answered about the future of Belarus, as the delegations have turned the topic controversial. Ideas ranging from democracy and monarchy to propping up a local dictator instead have been proposed, with the unifying fear being that the Belarusian people will soon try and unite again with the Russian people given the chance. Can a democracy placate them into the European sphere or can only the hard hand of monarchy or dictatorship keep the Belarusian people under our strict control."
@@ -189,6 +195,10 @@
   COE.27.d:0 "-"
   COE.27.a:0 "Andorra can remain sovereign"
   COE.27.b:0 "Include Andorra in Pan-Occitania"
+  COE.28.t:0 "Conference of Europe: Euskadi"
+  COE.28.d:0 "-"
+  COE.28.a:0 "Restore the pre-war borders"
+  COE.28.b:0 "Give the Basques the province of Alaba as compensation"
 
   COE.31.t:0 "Conference of Europe: Cavour Plan"
   COE.31.d:0 "Named after the old Count of Cavour, Camillo Benso, who opposed Italian unification under the Bourbons of the Two Sicilies, the Cavour Plan is the topic of debate that is raging through Palace het Loo. Few if any representatives are truly sure what to do with the Italian peninsula after its turn against the League of Nations and its support for French aggression. Many British diplomats argue that the support for France was unnatural, forced by French intervention and not a true expression of Italy's desire during the war. The nation was basically a hostage, forced by Paris to do its bidding. A few German representatives and the diplomats hailing from the Balkan nations disagree heavily with this assesement. \n\nThe opposition thus proposed the Cavour Plan, seeking to end the Italian project and dissolve the nation back into its original nation-states. A less aggressive version of the plan simply divides the nation into two blocs, a northern kingdom under German influence and a southern kingdom that is subject to British interests. Most British diplomats are, however, not keen on dividing the kingdom and still support lesser punishements for Italy than the dissolution of their nation."
@@ -206,7 +216,6 @@
   COE.33.c:0 "Grant it to the French"
   COE.33.e:0 "Grant it to the Italians"
   COE.33.f:0 "Grant it to the North Italians" 
-
 
   COE.41.t:0 "Conference of Europe: Forming a Polish State"
   COE.41.d:0 "With the liberation of the Polish people, decisions need to be made about the future of this group of people which has been oppressed for so long. An independent Polish state is in the cards, but the exact form of government remains unclear. Choices are mainly between installing a king and granting the Polish another chance at monarchism or allowing the formation of an independent republic of Poland."
@@ -240,12 +249,36 @@
   COE.49.a:0 "Lithuania has a just claim to Memel"
   COE.49.b:0 "Germany can better protect this land"
   COE.49.c:0 "Poland-Lithuania has a clear historical claim"
+  COE.49.e:0 "Give it to the Israelis" 
   COE.51.t:0 "Conference of Europe: Wilno"
   COE.51.d:0 "-"
   COE.51.a:0 "Give it to the Poles"
   COE.51.b:0 "Give it to the Belarussians"
   COE.51.c:0 "Give it to the Lithuanians"
   COE.51.e:0 "Give it to the Baltics" 
+  COE.52.t:0 "Conference of Europe: Courland"
+  COE.52.d:0 "-"
+  COE.52.a:0 "Grant Courland to the Poles"
+  COE.52.b:0 "Warsaw has no claim to Latvian territory" 
+  COE.53.t:0 "Conference of Europe: Jewish State in Prussia?"
+  COE.53.d:0 "With the failure to agree upon the establishment of a Jewish state in France, Zionist advocates have once again reached out to the delegations present at the Conference and asked for the establishment of a state for their people in the recently occupied Prussian provinces. \n\nWhile an incredibly odd suggestion and one that has divided even the Zionist world itself, the British delegation has seemingly been very warm to the idea of a Prussian Israel, though with the noted criteria that the existing Prussian people would be respected in their human rights. Germany hasn't made much noise about the prospect, but experts do seem to believe that the more liberal elements of German society would not mind, noting that the Prussian people are only seen as part of the \"proper German\" family by a branch of pan-Germanists. However, that does not guarantee Germany's cooperation."
+  COE.53.c:0 "Frankfurt will not allow a Jewish state in German lands..."
+  COE.53.a:0 "There's probably a better place for an Israel, is there not?"
+  COE.53.b:0 "The proposal seems sound enough!" 
+  COE.54.t:0 "Conference of Europe: Estonian-Finnish Union"
+  COE.54.d:0 "-"
+  COE.54.a:0 "We cannot consent to such an idea..."
+  COE.54.b:0 "We'll send the letter to Helsinki. Let's see what they think of it"
+  COE.55.t:0 "Estonia petitions for Union"
+  COE.55.d:0 "-"
+  COE.55.a:0 "Estonia is not Nordic, nor will it ever be Nordic"
+  COE.55.b:0 "We will defend our little brother with great honour"
+  COE.56.t:0 "Finland rejects Estonian Proposal"
+  COE.56.d:0 "The Estonian delegation sadly left the room when it heard the news that Helsinki had rejected the proposal of Finnish-Estonian union on the basis that it could not defend itself and Estonia at the same time. It seems that with their rejection, the dream of Estonia-Finland has died for a while..."
+  COE.56.a:0 "A sad fate for a weird proposal..."
+  COE.57.t:0 "Finland accepts Estonian Proposal"
+  COE.57.d:0 "In a weird twist of fate, the Finnish have agreed to unify Estonia and Finland into a federation, not too dissimilair to Germany's federal system. Both nations hold onto their parliaments, independent armies and navies, but have agreed to slowly integrate more and more functions of government over time into a federal entity, allowing for a future union of equals."
+  COE.57.a:0 "A weird conclusion, but at least a happy one!" 
 
   COEDEXTER.1.t:0 "The Discussion of a Jewish Homeland"
   COEDEXTER.1.d:0 "As British diplomats seek to further placate us with their Dexter Plan, the proposal of German diplomats to carve some territory away from France and give it to the Jewish people has been given the green light by the Brits. The Jewish people have suffered immensely under the French dictatorship, seeing themselves stripped from citizenship, property and sometimes their lives. The least we can do is come together and repay the Jewish people, a globally persecuted people, with their own homeland in France. \n\nThe question now remains which French state to grant the Jewish people. Preferably, the territory has a coast and isn't already claimed by another country."
@@ -373,8 +406,15 @@
 
   BLR_STATE:0 "People's Republic of Belarus"
   BLR_STATE_DEF:0 "the People's Republic of Belarus"
-  BLR_STATE_ADJ:0 "Belarusian
+  BLR_STATE_ADJ:0 "Belarusian"
+
+  EST_FINLAND:0 "Estonia"
+  EST_FINLAND_DEF:0 "the Federal State of Estonia"
+  EST_FINLAND_ADJ:0 "Estonian" 
+
   #Ideas
+
+  mitteleuropa_member:0 "Mitteleuropa Project"
  
   PB_Constitutionally_Enshrined_Neutrality:0 "International Neutrality"
   PB_Constitutionally_Enshrined_Neutrality_desc:0 "The neutrality of this nation is enshrined in its constitution and the treaty that established this country. Recognised by the international community, the neutrality of this nation is almost sacred."
