Large state and bug fix push

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -1,5 +1,8 @@
 ﻿ l_english:
 
+  ENG_SEIZED_NAVY:0 "§RThe British seized German Imperial Navy§!."
+  ENG_German_Airforce_in_Exile:0 "German Airforce in Exile"
+
   ###Generic Topbar Bar Description. Putting it here for now.
 
   Generic_Country_Desc_Topbar:0 "§YThis country currently doesn't have any content§!:\nThere may be provisional events and decisions for this nation but it is not recommended or even meant to be played. Currently the nations with actual content are:\n\n   - §YGermany§!\n\n   - §YFrance§!\n\n   - §YBritain§!\n\nHowever do not fear, maybe one day we will get around to adding playable content to this nation. Check our Discord and Steam page to see what nations are in current development. Please do refrain from reporting things such as empty loc events and other flavour related things for this nation. However do inform us of bugs or balance reccomendations.\n\n§YSpecial thanks to§!:\nBernie, Stallone, Lofn, Two-Watt, Wolfxe, Nilo, Mimi, Globus, Alfred/Fausi, BoringIndividual, Jubs, Tapir, Weis, Erwin, Jackie, Beezlebub, Zerogamer, SilentKing, Soble, Red, and Arj.\n\n"
@@ -986,8 +989,11 @@
   ##########################
   # DECISIONS
   ##########################
+
   PB_ENG_Domestic_and_Foreign_Policies:0 "Matters of the State"
   PB_ENG_Domestic_and_Foreign_Policies_desc:0 "\n\n\n\n\n\nAs The preeminent global power, Britain has numerous domestic and foreign policy responsibilities. Regardless of the political situation of the nation, these responsibilities must be handled. Britain has numerous concerns across the planet and on the continent, and with the tides of the world shifting towards war once again, we must do what we can to safeguard our interests."
+  PB_Operation_Heligoland:0 "[GER.GetFlag] Operation Heligoland"
+  PB_Operation_Heligoland_desc:0 "The French operation into Germany Proper has been met with a mix of horror and panic on the part of our German allies, unable to keep the French from advancing and potentially forcing a capitulation onto the German people. For Britain, however, the biggest of our worries is the possibility of the German navy falling into French hands. Sporting some very impressive technology, the German navy is far too powerful to become a tool of French neo-imperialism and must thus be seized before it is too late."
   PB_Emergency_Defense_Measures:0 "[ENG.GetFlag] Emergency Defense Measures"
   PB_Operation_Plantagenet:0 "[FRA.GetFlag] §YOperation Plantagenet§!"
   PB_Operation_Plantagenet_desc:0 "With France on the warpath once again, it is our duty to attempt to keep the peace in Europe. Left unattended for too long, France may subjugate the Germans and establish themselves as the preeminent continental power and become an existential threat to our interests. We must intervene to save not just ourselves, but the whole of Europe from the day of the jackboot."
@@ -1842,6 +1848,23 @@
   britain.3001.t:0 "Scientific Aid from the Confederation"
   britain.3001.d:0 ""
   britain.3001.a:0 "Good."
+ 
+  britain.3101.t:0 "Operation Heligoland"
+  britain.3101.d:0 "Our inability to stop the French and Russians from advancing further into our heartland has worried our British ally to no end. A special case in this situation is the German navy, who potentially may fall into the hands of the French, endangering the entire war effort by improving Paris' capability on the high seas against the British navy. \n\nTheir concerns are understandable, as the fate of Germany becomes bleaker by the second. It is perhaps the smart move for us in the long run to give the British access to our navy before the French will seize it for their imperialist ambitions."
+  britain.3101.a:0 "We trust London to take care of our ships!"
+  britain.3101.b:0 "There's no need to panic, we can handle this!"
+
+  britain.3102.t:0 "Operation Heligoland - Germany Agrees"
+  britain.3102.d:0 "A telegram from Germany has finally come, bringing good news to the British High Command: Germany agrees to the terms of Operation Heligoland, transfering the German ships that remain to the British Empire in an attempt to keep the French from seizing them. With the German ships under our control, Britain can sleep easy knowing that French naval supremacy remains quite impossible."
+  britain.3102.a:0 "Great Britain continues to rule the waves"
+
+  britain.3103.t:0 "Operation Heligoland - Germany Refuses"
+  britain.3103.d:0 "Our stubborn ally seems unable to see the writing on the wall, as a telegram from the German High Command confirms their refusal to hand over the High Seas Fleet to the British Empire. Germany still believes that it can win the war in its current state, something we have to vehemently disagree with. The danger of the German navy falling into French hands has now doubled and a possible contingency plan is being drawn up."
+  britain.3103.a:0 "Are those Germans mad?!"
+
+  britain.3104.t:0 "The Teutonic Tigers"
+  britain.3104.d:0 "In a daring move, facing incredible odds, parts of the German Imperial Airforce have crossed enemy-held territory and the English Channel on limited fuel, landing near London. Following the orders of their government in exile, these young pilots seek to join the RAF and fight against the French menace in continental Europe, helping allied pilots above Germany and France. Their service could help us quite a bit during this conflict."
+  britain.3104.a:0 "These brave pilots would do great in the RAF!"
 
   britain.4000.t:0 "The Nicaragua Canal is Completed!"
   britain.4000.d:0 "After years of dilligent work, the Nicaragua Canal has finally been completed. Through thick and thin, British support for the project has at long last paid off. In a lavish ceremony, British nobility and corporate officials celebrated the completion of the canal and the splendor of the Empires economic might. The announcement was soon followed by the formation of the Nicaragua Canal Company, a state-managed Imperial Corporation which will be responsible for policing and maintaining the Canals facilities.\n\nThe occasion has not been entirely without controversy, as the Nicaraguan government voiced displeasure at their minimal role in the NCC, which will see them see very few of the dividends from the canal taxes. Some more radical elements of the government outright denounced the British and have avowed their efforts to take back supposedly rightful Nicaraguan land. Controversy still surrounds the canal even beyond this, as many British reformists argued against the use of poorly paid locals and African \"travel workers\", the latter of which received almost no pay at all save room and provisions. Nevertheless, Britain has acquired yet another powerful economic chip in global geopolitics. Alongside the Suez, Britain has a tremendously powerful monopoly on global and inter-empire trade."
