--- a/localisation/english/PB_CoE_l_english.yml
+++ b/localisation/english/PB_CoE_l_english.yml
@@ -72,6 +72,8 @@
 
   PB_CoE_Form_a_Belarussian_Government:0 "Appoint a Minsk Government"
   PB_CoE_Form_a_Belarussian_Government_desc:0 "The interim occupation government of Belarus has lived out its use and soon a more native government will need to be appointed to placate the population. Serious questions need to be answered about the future of Belarus, as the delegations have turned the topic controversial. Ideas ranging from democracy and monarchy to propping up a local dictator instead have been proposed, with the unifying fear being that the Belarusian people will soon try and unite again with the Russian people given the chance. Can a democracy placate them into the European sphere or can only the hard hand of monarchy or dictatorship keep the Belarusian people under our strict control."
+  PB_CoE_Integrate_Belarus_with_Warsaw:0 "Include Belarus in the Międzymorze"
+  PB_CoE_Integrate_Belarus_with_Warsaw_desc:0 "-"
 
   PB_CoE_France_as_topic:0 "Discussing France"
   PB_CoE_Spain_as_topic:0 "Discussing Spain"
