More AME development

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -153,6 +153,79 @@ PB_AME_Litigate_White_Militias:0 "Litigate White Militias"
 PB_AME_Maintain_Literacy_Tests:0 "Preserve the Literacy Tests"
 PB_AME_Soften_Anti_Dixieism:0 "Pro-Dixie Rhetoric"
 
+PB_AME_Liberty_and_Progress:0 "Liberty and Progress"
+PB_AME_Reverse_Native_Policy:0 "Reverse the Indian Policy"
+PB_AME_Free_Tribes_Resettlement_Proposal:0 "The Free Tribes Resettlement Proposal"
+PB_AME_Indian_Language_Schools:0 "Indian Language Schools"
+PB_AME_Limit_Seminole_Autonomy:0 "Limit Seminole Autonomy"
+PB_AME_American_Cultural_Dominance:0 "The Americanization Effort"
+PB_AME_Abolish_Indian_Dominions:0 "Abolish the Indian Dominionship Act"
+PB_AME_No_More_Special_Treatment:0 "End the Special Priviliges"
+PB_AME_Indian_Provincial_Redistricting:0 "Redraw Indian-Majority Districts"
+PB_AME_New_Economic_Spectre:0 "The Spectre of Lady Economy"
+PB_AME_Negotiate_Americas_Contribution:0 "Negotiate America's Contribution"
+PB_AME_Kelloggs_London_Proposal:0 "Kellogg's London Plan"
+PB_AME_An_Independent_Credit_Line:0 "An Independent Credit Line"
+PB_AME_Debt_has_Its_Own_Benefit:0 "The Freedom of Debt"
+PB_AME_The_Bank_of_America_is_Open:0 "The Bank of America is Open!"
+PB_AME_North_American_Economic_Community:0 "Form a Community of North American Nations"
+PB_AME_Abolish_Intra_Imperial_Tariffs:0 "Abolish Intra-Imperial Tariffs"
+PB_AME_Reconsider_the_Special_Relationship:0 "Reconsider the Special Relationship"
+PB_AME_Contribute_American_Peacekeepers:0 "Contribute to Peacekeeping"
+PB_AME_Negotiate_on_the_Halibut_Wars:0 "An End to the Halibut Wars"
+PB_AME_Caribbean_Pond_Policy:0 "Caribbean Pond Policy"
+PB_AME_Form_the_North_Atlantic_Trade_Organization:0 "Form the North Atlantic Trade Organisation"
+PB_AME_One_Empire_Two_Economies:0 "One Empire, Two Economies"
+PB_AME_One_Empire_One_Economy:0 "One Imperial Economy"
+PB_AME_Stop_Fencesitting:0 "Stop Fencesitting"
+PB_AME_Shake_Hands_with_Activists:0 "Search for a Freedmen Delegation"
+PB_AME_Contact_Southerners:0 "Contact Southern Lobbies"
+PB_AME_The_Great_Southern_Conference:0 "The Great Southern Conference"
+PB_AME_Stonewalling_Segregation:0 "Stonewalling Segregation"
+PB_AME_Mediocre_Success:0 "Mediocre Success..."
+PB_AME_A_Solid_Solution:0 "A Solution for Peace"
+
+PB_AME_America_for_the_Workers:0 "America for the Workers"
+PB_AME_Moderate_Voice_of_America:0 "Moderate our Message"
+PB_AME_One_Voice_of_Thousands:0 "One Voice speaks for Millions!"
+PB_AME_War_against_Poverty:0 "War against Poverty"
+PB_AME_Introduce_Filler_Jobs:0 "Introduce Filler Jobs"
+PB_AME_The_Square_Deal:0 "The Square Deal"
+PB_AME_Street_to_Factories_Program:0 "Street to Factories Program"
+PB_AME_Carrot_and_Stick_Policy:0 "Carrot and Stick Policy"
+PB_AME_Mandatory_Human_Quotas:0 "Mandate Human Worker Quotas"
+PB_AME_Utilize_Employment_Incentives:0 "The People's Employment Act"
+PB_AME_Target_Sensodrug_Use:0 "Combat the Sensodrug Epidemic"
+PB_AME_Promote_Workforce_Augmentation:0 "Promote Workforce Augmentation"
+PB_AME_Stimulate_Manual_Labour:0 "Stimulate Manual Labour"
+PB_AME_Tour_the_Megaplex_Slums:0 "Tour the Nation's Slums"
+PB_AME_Nurture_Urban_Migration:0 "Nurture Urban Growth"
+PB_AME_Promote_Megaplex_Tourism:0 "Promote Megaplex Tourism"
+PB_AME_Cooperate_with_Labour_Unions:0 "Cooperate with City Unions" 
+PB_AME_War_against_Monopoly:0 "War against Monopoly"
+PB_AME_Intimidate_the_EIEC:0 "Intimidate the EIEC"
+PB_AME_Threaten_Nationalisation:0 "Threat of Nationalisation"
+PB_AME_Empty_Threats_Emptier_Promises:0 "Empty Threats, Emptier Promises"
+PB_AME_Double_Down_on_Demands:0 "Double Down on Demands!"
+PB_AME_Triump_of_Lang:0 "Triump of the Common Folk"
+PB_AME_Conflict_of_Interests:0 "Violent Conflict of Interests"
+PB_AME_Lunch_with_Board_Directors:0 "Lunch with Board Directors"
+PB_AME_Compromise_with_the_Corporations:0 "Compromise with Business"
+PB_AME_Trade_of_Favours:0 "Trading of Favours"
+PB_AME_Melbourne_Workers_Rights_Charter:0 "The Melbourne Worker's Rights Charter"
+PB_AME_EIEC_Union_Cooperation:0 "Symbiosis of Edison and the Union"
+PB_AME_Pull_back_the_Pinkertons:0 "Pull Back the Pinkertons" 
+PB_AME_War_against_Gerontocracy:0 "War against Gerontocracy"
+PB_AME_Anti_Luddist_Stance:0 "Anti-Luddist Stance"
+PB_AME_Contact_with_Edison:0 "Contract with Edison"
+PB_AME_Technological_Funding_Spree:0 "Technological Funding Spree"
+PB_AME_Nation_of_Tomorrow:0 "\"Nation of Tomorrow\" Speech"
+PB_AME_Brightest_Minds_of_the_Commonwealth:0 "The Commonwealth's Common Minds"
+PB_AME_Intensify_Electrification:0 "Bring Light to the Countryside"
+PB_AME_Bureau_of_Technology_and_Science:0 "Bureau of Technology and Science"
+PB_AME_Sign_the_Black_Budget:0 "Sign the Black Budget"
+PB_AME_Form_the_Trinity_Committee:0 "Form the Trinity Committee" 
+
 ##########################
 # PARLIAMENT MECHANICS
 ##########################
