--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -966,3 +966,5 @@
  VICTORY_POINTS_2008:0 "León de los Aldama"
  VICTORY_POINTS_5021:0 "Tampico"
  VICTORY_POINTS_4908:0 "Guaymas"
+ VICTORY_POINTS_4590:0 "Freetown"
+ VICTORY_POINTS_1523:0 "Allenchurch"
