Some quick fixes + gfx

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -8722,6 +8722,30 @@ SAN_an_ADJ:0 "Indian"
  PAL_DEF:0 "Palestine"
  PAL_ADJ:0 "Palestinean" 
 
+ BAH:0 "the Bahamas"
+ BAH_DEF:0 "the Republic of the Bahamas"
+ BAH_ADJ:0 "Bahamian"
+ 
+ CUB:0 "Cuba"
+ CUB_DEF:0 "the Republic of Cuba"
+ CUB_ADJ:0 "Cuban"
+
+ LAO:0 "Laos"
+ LAO_DEF:0 "the Kingdom of Laos"
+ LAO_ADJ:0 "Laotian" 
+
+ BAN:0 "Bangladesh"
+ BAN_DEF:0 "the Republic of Bangladesh"
+ BAN_ADJ:0 "Bangladeshi"
+
+ BEN:0 "Bengal"
+ BEN_DEF:0 "the Republic of Bengal"
+ BEN_ADJ:0 "Bengali" 
+
+ BRM:0 "Burma"
+ BRM_DEF:0 "the Kingdom of Burma"
+ BRM_ADJ:0 "Burmese"
+
 ###################################
 # TEMPLATE
 ################################### #use the or so help me i will find you #*this not the
