--- a/localisation/english/PB_Sante_Fe_l_english.yml
+++ b/localisation/english/PB_Sante_Fe_l_english.yml
@@ -27,7 +27,7 @@ PB_SFE_Apache_Agreements_desc:0 "Santa Fe has a significant population of Apache
 #################
 
 santafe.1.t:0 "Romani Settlers"
-santafe.1.d:0 "WIP"
+santafe.1.d:0 "Today in the capital, Santa Fe, a caravel arrived. About 10 carts all filled with people and personal belongings. After talking to people, the locals on the edge of town discovered they were of Romani or Gypsy descent and said they were looking for a place to settle down and sleep after being thrown out of the UC by the English. They said they don’t mean any harm and are okay with it if they can’t live in or close to the city. But luckily at that moment an official from the central government arrived and told them that there was a spot in the east of town near the hills, where they were more than welcome to settle down and become part of Santa Fe. The people bursted out in joy and hugged the official and people there, thanking them profusely.\n\After the enthusiasm died down, the official guided the Romani people to the place he mentioned. When they arrived there, it is said that the head of the caravel called it paradise. So now the official has noted down that that is what it will be called when it is dealt with in any official documentation of sorts."
 santafe.1.a:0 "Everyone is welcome!"
 
 santafe.2.t:0 "Tejas Border Raid"
@@ -38,11 +38,15 @@ santafe.3.t:0 "Capitán Sol"
 santafe.3.d:0 "WIP"
 santafe.3.a:0 "Such Action!"
 
-santafe.4.t:0 "Tuscon Train Robbery"
+santafe.4.t:0 "Boomtown Train Robbery"
 santafe.4.d:0 "WIP"
 santafe.4.a:0 "Damn Trains!"
 
 santafe.5.t:0 "Trial Of Juan Peris"
 santafe.5.d:0 "WIP"
 santafe.5.a:0 "The Rule Of Justice"
+
+santafe.6.t:0 "Political Instabilty"
+santafe.6.d:0 "WIP"
+santafe.6.a:0 "It's Beginning To Crumble"
 
