--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -898,6 +898,11 @@
   PBNews.227.d:0 "The Great Basin Republic announced today to Mormons across the Wild West that the time of persecution against their peoples has now come to an end. This new era of Mormon ascendancy as it was to be called came shortly after the unveiling of a new flag, name, and anthem for the country. A long day’s ceremony was to be held in the nation’s capital where delegations were to be sent across North America. While many believe these recent events have spelt the end of the legacy of the Wild West there are those that believe that it is only time before this new state descends into anarchy."
   PBNews.227.a:0 "Believe that man doth not comprehend all the things which the Lord can comprehend."
 
+  PBNews.228.t:0 "GLOBAL REVOLUTIONARY FRONT"
+  PBNews.228.d:0 "Today both Tokyo and [SCA.capital.GetName] announced to the world the establishment of the Global Revolutionary Front, a military alliance that would see the destruction of capitalist sytems world wide. Semdley Butler announced that this alliance would be but the first of many steps in helping those who have struggled under the totalitarian system of consumer economies. While the non-major Jacobin powers of the world have remained silent to such a statement already reports of an increased G.R.F presence in both the Pacific and Atlantic are making the headlines.   "
+  PBNews.228.a:0 "The Jacobin cause spreads."
+
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
