--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -85,6 +85,8 @@
 
   PB_SCA_Anti_War_League:0 "Anti-War League"
 
+  PB_SCA_Assisting_The_Pacte:0 "Assisting The Pacte"
+
   ##########################
   # TECHNICAL TEAMS
   ##########################
@@ -132,6 +134,7 @@
   SCA_Stabilize_The_Nation:0 "Stabilize The Nation"
   SCA_Reveal_Ourselves:0 "Reveal Ourselves"
   SCA_Reveal_Ourselves_desc:0 "The time has come to reveal ourselves to the United Commonwealth and avenge the failed revolution."
+  SCA_Recruit_Cowboys:0 "Recruit Cowboys"
 
   PB_SCA_The_Great_Leap_Forward:0 "The Great Leap Forward"
   PB_SCA_The_Great_Leap_Forward_desc:0 "\n\n\n\n\n\nIf we plan to reclaim America then we must surpass its undeniable industrial advantage over our state. New factories, mines, and such will need to be immediatly expanded upon if we ever wish to see victory over Philedphia."
@@ -307,13 +310,15 @@
   PB_SCA_President_For_Life:0 "President For Life"
   PB_SCA_President_For_Life_desc:0 "\n\n\n\n\n\nButler has declared himself President for life. While this has come as a shock to some most have openly welcomed this fact. While Congress will still play a role in the affairs of the state Butler's word is to remain final. But despite this clear violation of revolutionary democracy other things demand both the attention of Butler and the American people."
   SCA_Search_For_Oil:0 "Search For Oil"
-  SCA_The_Alaska_Purchase_tt:0 "\n§HRussia§! must agree to our demands for the following effects to unlock:\n"
+  SCA_The_Alaska_Purchase_tt:0 "\n§HRussia§! must agree to our demands for the following £GFX_decision_icon_small decision to unlock:\n"
+  SCA_A_Pragmatic_Alliance_tt:0 "\n§HJapan§! must agree to our demands for the following £GFX_decision_icon_small decision to unlock:\n"
   SCA_The_East_Coast_Boom:0 "The East Coast Boom"
   SCA_Fund_The_Intellectuals:0 "Fund The Intellectuals"
   SCA_Establish_Regional_Committees:0 "Establish Regional Committees"
   SCA_Policy_Of_Self_Reliance:0 "Policy Of Self Reliance"
   SCA_Support_Our_Subjects:0 "Support Our Subjects"
   SCA_Demand_The_Miskito_Coast:0 "Demand The Miskito Coast"
+  SCA_The_Pacific_Springboard:0 "The Pacific Springboard"
  
   ##########################
   # STATE RESOURCE GRAIN + ISOLATION
@@ -619,7 +624,7 @@
   SCA_The_Equal_Rewards_Act_desc:0 "While building houses and factories are good steps toward creating a better nation, they matter little if the people work tirelessly for scraps. Even as we patch the holes left by the Imperialists of the past, many still find themselves only earning enough for a single loath of bread even as they work for many hours. We will ensure this will never happen again. With the passing of this act, wages will be standardised across the board. All workers will receive the same wage equivalent to the amount of work they produce. Those who work in more intensive fields, both physically and mentally, will receive more compensation for their efforts. Thus allowing everyone to earn what they deserve, no more no less."
 
   SCA_The_Equal_Opportunities_Act:0 "The Equal Opportunities Act"
-  SCA_The_Equal_Opportunities_Act_desc:0 ""
+  SCA_The_Equal_Opportunities_Act_desc:0 " Until recently, in most of the world, education was a rare and expensive luxury that few could afford. But even in this day and age, much of our population remains uneducated beyond the bare minimum. Uneducation breeds ignorance, which leads to prejudice and all the other problems that have plagued us in the past. But education is an effective solution to these woes, and we intend to use it. This Act will create a strong population, smarter than anywhere else. With this vast access to information, we can combat misinformation easily. And create opportunities for success, giving everyone a fair chance to make something of themselves."
 
   SCA_The_Great_Leap_Forward:0 "The Great Leap Forward"
   SCA_The_Great_Leap_Forward_desc:0 ""
@@ -803,8 +808,8 @@
   SCA_The_Thorn_In_Our_Side:0 "The Thorn In Our Side"
   SCA_The_Thorn_In_Our_Side_desc:0 ""
 
-  SCA_Kill_The_Fat_Bastards:0 "Kill The Fat Bastards"
-  SCA_Kill_The_Fat_Bastards_desc:0 ""
+  SCA_The_Northern_Campaign:0 "The Northern Campaign"
+  SCA_The_Northern_Campaign_desc:0 ""
 
   SCA_The_Butler_Manifesto:0 "The Butler Manifesto"
   SCA_The_Butler_Manifesto_desc:0 ""
@@ -948,6 +953,10 @@
   SCA_Red_America_DEF:0 "Continental Interim Government"
   SCA_Red_America_ADJ:0 "American"
 
+  SCA_North_American_Union:0 "North American Union"
+  SCA_North_American_Union_DEF:0 "North American Union"
+  SCA_North_American_Union_ADJ:0 "American"
+
   SCA_Establish_The_Interim_Government_tt:0 "Allows for the coring of American £GFX_territory_icon states"
 
   SCA_The_American_Cultural_Revolution_tt:0 "§YAmerican§! will become the §Cmain culture§! of the [SCA.GetName]\n\n"
@@ -960,11 +969,25 @@
 
   SCA_The_All_American_Reclamation_Committee_2_tt:0 "The following §HWild West§! nations will now be allowed to expand through §RConquest§!:\n\n"
 
+  FRA_control_england_SCA:0 "§YGermany§! has fallen to the §RPacte Revanchiste§!"
+  FRA_control_germany_SCA:0 "§YBritain§! has fallen to the §RPacte Revanchiste§!"
+
+  SCA_The_Guaranteed_Work_Act_enable:0 "Is allowed to do this decision"
+  SCA_The_Military_Readiness_Act_enable:0 "Is allowed to do this decision"
+  SCA_The_Property_Ownership_Act_enable:0 "Is allowed to do this decision"
+  SCA_The_Seven_Deadly_Sins_enable:0 "Is allowed to do this decision"
+
   ##########################
   # TECH
   ##########################
 
   dependencies_x:0 "Unlocks Cowboy Tree"
+
+  ##########################
+  # TECH
+  ##########################
+
+  JAP_SCA_Alliance:0 "Global Revolutionary Front"
 
   ##########################
   # EVENTS
@@ -1008,12 +1031,12 @@
 
   SCA8title:0 "The SCA Demands Our Annexation"
   SCA8desc:0 "" 
-  SCA8opta:0 "Yes"
-  SCA8optb:0 "No"
+  SCA8opta:0 "Yes."
+  SCA8optb:0 "No."
 
   SCA9title:0 "Our Demands Were Rejected"
   SCA9desc:0 "The demands of annexation that we had sent were rejected. While our men may already be beaten and tired there are some still capable of fighting." 
-  SCA9opta:0 "War it is"
+  SCA9opta:0 "War it is."
 
   SCA10title:0 "Our Demands Were Accepted"
   SCA10desc:0 "The demands of annexation that we had sent were accepted. Occupational forces are already moving to secure the region. " 
@@ -1029,8 +1052,8 @@
 
   SCA13title:0 "The Americans Request to Buy Alaska"
   SCA13desc:0 "" 
-  SCA13opta:0 "Yes"
-  SCA13optb:0 "No"
+  SCA13opta:0 "Yes."
+  SCA13optb:0 "No."
 
   SCA14title:0 "The Russians Agree"
   SCA14desc:0 "The Russians have agreed to our purchase offer of Alaska and economic negotiations are close to concluding." 
@@ -1038,11 +1061,24 @@
 
   SCA15title:0 "The Russians Refuse"
   SCA15desc:0 "The Russians have refused our purchase offer of Alaska." 
-  SCA15opta:0 "Blast"
+  SCA15opta:0 "Blast."
 
   SCA16title:0 "The Eastern Threat"
   SCA16desc:0 "" 
-  SCA16opta:0 "Be must ready ourselves"
+  SCA16opta:0 "Be must ready ourselves."
+
+  SCA17title:0 "Alliance With The [SCA.GetName]?"
+  SCA17desc:0 "" 
+  SCA17opta:0 "The Revolution must stay united."
+  SCA17optb:0 "With Americans? No thank you."
+
+  SCA18title:0 "Birth Of The Global Revolutionary Front"
+  SCA18desc:0 "" 
+  SCA18opta:0 "Workers of the world unite!"
+
+  SCA19title:0 "A Dismissive Letter From Tokyo"
+  SCA19desc:0 "" 
+  SCA19opta:0 "WHAT!"
 
 
 
