New VPs and a unitstack fix

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -466,7 +466,7 @@
  VICTORY_POINTS_4893:0 "Herat"
  VICTORY_POINTS_3957:0 "Georgetown"
  VICTORY_POINTS_3878:0 "New York"
- VICTORY_POINTS_9450:0 "Chicago"
+ VICTORY_POINTS_9450:0 "Chicagou"
  VICTORY_POINTS_9814:0 "Los Angeles"
  VICTORY_POINTS_10337:0 "Crosnier"
  VICTORY_POINTS_788:0 "Norfolk"
@@ -484,7 +484,7 @@
  VICTORY_POINTS_4569:0 "St.Louis"
  VICTORY_POINTS_4860:0 "Tonkaliwako"
  VICTORY_POINTS_6696:0 "Victoria"
- VICTORY_POINTS_6710:0 "Detroit"
+ VICTORY_POINTS_6710:0 "Détroit"
  VICTORY_POINTS_6732:0 "Boston"
  VICTORY_POINTS_6845:0 "Philadelphia"
  VICTORY_POINTS_6855:0 "Columbus"
@@ -968,3 +968,27 @@
  VICTORY_POINTS_4908:0 "Guaymas"
  VICTORY_POINTS_4590:0 "Freetown"
  VICTORY_POINTS_1523:0 "Allenchurch"
+ VICTORY_POINTS_12697:0 "Springfield" 
+ VICTORY_POINTS_10457:0 "Winchester"
+ VICTORY_POINTS_4437:0 "Louisville"
+ VICTORY_POINTS_689:0 "Wyandot"
+ VICTORY_POINTS_5205:0 "Sault Sainte-Marie"
+ VICTORY_POINTS_6782:0 "Campau"
+ VICTORY_POINTS_6769:0 "Silex"
+ VICTORY_POINTS_3763:0 "Claremont-Hamilton"
+ VICTORY_POINTS_749:0 "Niagara"
+ VICTORY_POINTS_9667:0 "Petite Côte"
+ VICTORY_POINTS_3605:0 "Frontenac"
+ VICTORY_POINTS_9585:0 "Orillia"
+ VICTORY_POINTS_13276:0 "Manti"
+ VICTORY_POINTS_12134:0 "Brigham"
+ VICTORY_POINTS_7721:0 "New Jordan"
+ VICTORY_POINTS_11698:0 "Humility"
+ VICTORY_POINTS_505:0 "Gangkou"
+ VICTORY_POINTS_11495:0 "Hóngyè"
+ VICTORY_POINTS_3513:0 "Waldenia"
+ VICTORY_POINTS_4328:0 "Pleasant"
+ VICTORY_POINTS_12281:0 "Fort Washington"
+ VICTORY_POINTS_12673:0 "Liberty"
+ VICTORY_POINTS_10690:0 "Gadsdenville"
+ VICTORY_POINTS_10327:0 "Freetown"
