--- a/localisation/english/PB_Mexico_l_english.yml
+++ b/localisation/english/PB_Mexico_l_english.yml
@@ -106,19 +106,47 @@
   mexico.15.d:0 "The decision is final. Prohibition shall be reformed, not abolished, reformed. And it seems it will be done in a way to make most people happy. The changes are clear. The sale of alcoholic drinks is technically still illegal, but can now be bought in government owned stores. The beer production companies are allowed to produce it again if they get a deal with the government. Prices will also be set by the government on a national level. There is also good news for the cafe and pub owners, they can sell alcohol with the permission of the local government alcohol store, which will be where they get their alcohol for a lower price, after which they can sell it again for the national price. They are also only allowed to sell it from 19:00 in the evening to 3:00 in the night.\n\Basically everyone is happy with this change, because it ensures that people can still drink their favourite beer, reduce mafia activity and still cut down on alcohol use and abuse. A real step in the right direction many have said."
   mexico.15.a:0 "Let's Hope It'll Work!"
 
-  mexico.16.t:0 "Heat Wave Of 34"
-  mexico.16.d:0 ""
+  mexico.16.t:0 "Heat Wave Of '34"
+  mexico.16.d:0 "Many people this summer found themselves essentially drying up. There was a massive crop failure in the entire north of the country thus resulting in a semi-famine in the north until they were resupplied by farms from the south. It was a critical situation for anyone to be in. Many people temporarily or permanently moved to live with family in the south. But even there at times the heat was unbearable.\n\All this heat caused some political instability in the central government, who were ineffective in dealing with the semi-famine and water problems in the north country. This meant that many people had to suffer because of incompetent bureacracy. This is certainly not a good image for the government."
   mexico.16.a:0 "Damn It's Hot!"
 
   mexico.17.t:0 "Durango Water Company"
-  mexico.17.d:0 ""
+  mexico.17.d:0 "After the terrible catastrophe that was the summer, the government has decided to take major measures to ensure it can never happen again. They have launched the Durango Water Company, a semi-independent company funded by the government.\n\This company has practically all the rights to water in Mexico, and is allowed to build filtration stations, canals to redirect water currents and pipelines to supply people in other areas. And when something like the heat wave should occur again, this company will make the decisions on how to deal with it effectively without having to wait for orders from the tops of the national government. Some people are worried about the power this company will gain over the water supply, but the government said not to worry as they will keep a very close eye on anything this company does, plus the fact that for large scale projects they’ll need government permits and funds, which they can’t gain without the government looking into the project. This does spark some hope."
   mexico.17.a:0 "I Was A Bit Thirsty This Summer!"
 
   mexico.18.t:0 "Corruption Investigation"
-  mexico.18.d:0 ""
+  mexico.18.d:0 "Although the December Reforms had been relatively successful at eliminating corruption at the smaller scale across the country, corruption on the higher levels was never addressed. Until now. Recently a worker from the ministry of finance had been accused of taking bribes from the mafia in Mexico City and leaking certain classified documents to them. When the higher ups heard of this news, they were furious. Next week he is being tried in the court of Mexico City. Everyone knew there was corruption, but didn’t think it was this bad."
   mexico.18.a:0 "What A Scandal!"
   
   #1935
   mexico.19.t:0 "The War On The Mafia"
   mexico.19.d:0 "WIP"
   mexico.19.a:0 "Sons Of Bitches!"
+
+  mexico.20.t:0 "La Banda De Neptuno"
+  mexico.20.d:0 "WIP (the band from neptune)"
+  mexico.20.a:0 "Nice Tunes!"
+
+  mexico.21.t:0 "Villa De Cristal Raid"
+  mexico.21.d:0 "WIP"
+  mexico.21.a:0 "Good Catch!"
+
+  mexico.22.t:0 "The Veracruz Arrests"
+  mexico.22.d:0 "WIP"
+  mexico.22.a:0 "All In One City?"
+
+  mexico.23.t:0 "Big Boss Captured"
+  mexico.23.d:0 "WIP"
+  mexico.23.a:0 "One Down, Many To Go!"
+
+  mexico.24.t:0 "War On Mafia Won?"
+  mexico.24.d:0 "WIP"
+  mexico.24.a:0 "What A Speech!"
+
+  mexico.25.t:0 "Northern Refugees"
+  mexico.25.d:0 "WIP"
+  mexico.25.a:0 "What's Happening Up There?"
+
+  mexico.26.t:0 "Welcome To Tucson?"
+  mexico.26.d:0 "WIP (grestin from future?)"
+  mexico.26.a:0 "A Weird Fella?"
