some slight VP work

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -992,3 +992,5 @@
  VICTORY_POINTS_12673:0 "Liberty"
  VICTORY_POINTS_10690:0 "Gadsdenville"
  VICTORY_POINTS_10327:0 "Freetown"
+ VICTORY_POINTS_10606:0 "Kelly"
+ VICTORY_POINTS_12024:0 "Granger"
